--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "create-react-app": "^1.4.3",
     "prop-types": "^15.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
+    "redux": "^4.1.1",
     "save": "^2.3.1"
   },
   "scripts": {
