--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^5.1.3",
+    "axios": "^0.23.0",
+    "bootstrap": "^5.1.1",
     "create-react-app": "^1.4.3",
     "prop-types": "^15.6.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
     "redux": "^4.1.1",
