--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "axios": "^0.23.0",
     "bootstrap": "^5.1.1",
     "create-react-app": "^1.4.3",
+    "google-map-react": "^2.1.10",
     "prop-types": "^15.6.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
     "react-scripts": "^4.0.3",
     "redux": "^4.1.1",
     "save": "^2.3.1"
